<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout
    app:flexWrap="wrap"
    app:flexDirection="row"
    app:justifyContent="space_around"
    android:padding="20sp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:backgroundTint="@color/red"
            android:id="@+id/fab_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_temperature" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_temp"
            android:text="@string/txt_temperature"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/lightBlue"

            android:id="@+id/fab_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_rain" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_rain"
            android:text="@string/txt_rain"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/icyBlue"

            android:id="@+id/fab_hail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_hail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_hail"
            android:text="@string/txt_hail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/lightGrey"

            android:id="@+id/fab_fog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_fog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_fog"
            android:text="@string/txt_fog"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/grey"

            android:id="@+id/fab_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_cloud"
            android:text="@string/txt_cloud"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/yellow"

            android:id="@+id/fab_storm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_storm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_storm"
            android:text="@string/txt_storm"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/orange"

            android:id="@+id/fab_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_wind" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:id="@+id/txt_wind"
            android:text="@string/txt_wind"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/blue"

            android:id="@+id/fab_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_current" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_current"
            android:text="@string/txt_current"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/petrolBlue"

            android:id="@+id/fab_transparency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_transparency" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_transparency"
            android:text="@string/txt_transparency"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10sp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:backgroundTint="@color/green"

            android:id="@+id/fab_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:tint="@color/white"
            android:src="@drawable/ic_other" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/txt_other"
            android:text="@string/txt_other"/>

    </LinearLayout>

</com.google.android.flexbox.FlexboxLayout>
