<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_level_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/des_basic"
        android:layout_marginBottom="40dp"
        android:textSize="30sp"
        android:text="Specify scale:" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_level_one"
        style="@style/MyFloatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_level_two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/fab_level_one"
        app:layout_constraintStart_toStartOf="@id/fab_level_one"
        app:layout_constraintEnd_toEndOf="@id/fab_level_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:id="@+id/txt_view_level_one"
        android:text="@string/level_one" />

    <ImageView
        android:id="@+id/img_level1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab_level_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_flame"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_level_two"
        style="@style/MyFloatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/fab_level_two"
        app:layout_constraintStart_toStartOf="@id/fab_level_two"
        app:layout_constraintEnd_toEndOf="@id/fab_level_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:id="@+id/txt_view_level_two"
        android:text="@string/level_two" />

    <ImageView
        android:id="@+id/img_level2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40sp"
        android:src="@drawable/ic_flame"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/white" />

    <ImageView
        android:id="@+id/img_level2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="40sp"
        android:src="@drawable/ic_flame"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_level_three"
        style="@style/MyFloatingActionButton"
        app:layout_constraintStart_toEndOf="@id/fab_level_two"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/fab_level_three"
        app:layout_constraintStart_toStartOf="@id/fab_level_three"
        app:layout_constraintEnd_toEndOf="@id/fab_level_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:id="@+id/txt_view_level_three"
        android:text="@string/level_three" />

    <ImageView
        android:id="@+id/img_level3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fab_level_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginStart="40sp"
        android:src="@drawable/ic_flame"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/white" />

    <ImageView
        android:id="@+id/img_level3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fab_level_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="40sp"
        android:src="@drawable/ic_flame"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/white" />

    <ImageView
        android:id="@+id/img_level3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fab_level_two"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40sp"
        android:src="@drawable/ic_flame"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>